--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-12">
-    <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
+    <div class="d-flex flex-column flex-md-row justify-content-between bg-white shadow-sm p-3 border">
       <h6 class="h6 text-muted">
         These are how much time you spent on tasks from this project. <span class='text-capitalize font-weight-bold'><%= @project.name %></span>
       </h6>
@@ -14,7 +14,7 @@
 </div>
 <div class="row">
   <div class="col-12 p-0">
-    <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
+    <div class="d-flex flex-column flex-md-row justify-content-between bg-white shadow-sm p-3 border">
       <h6 class="h6 text-muted">
         These are all the groups that are a part of this project.
       </h6>
@@ -27,8 +27,10 @@
     <div class="col-12">
         <div class="media bg-white shadow-sm border p-2">
           <div class="media-body">
-            <div class="d-flex justify-content-between pt-2"> <p class="m-0 p-0 text-muted"> <%= group.name%> </p> <p class="m-0 p-0"> <%=  current_user.format_duration(total_group_time(group.tasks)) %> </p>  </div>
-            <div class="d-flex justify-content-between pt-1"> <p class="m-0 p-0 text-muted"> <%= group.created_at.to_date %> </p> <p class="m-0 p-0 text-muted"> <%=  group.name if group %> </p>   </div>
+          <%= link_to group_path(group)  do%>
+            <div class="d-flex flex-column flex-md-row justify-content-between pt-2"> <p class="m-0 p-0 text-muted">Group name: <%= group.name%> </p> <p class="m-0 p-0"> Time spend on tasks from this group: <%=  current_user.format_duration(total_group_time(group.tasks)) %> </p>  </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between pt-1"> <p class="m-0 p-0 text-muted"> Date of creation: <%= group.created_at.to_date %> </p> <p class="m-0 p-0 text-muted"> Author: <%=  group.user.name if group %> </p>   </div>
+          <% end %>
           </div>
         </div>
     </div>
