add group index and project index edge case of 0 items

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
-<div class="container-fluid w-100 bg-darkblue">
+<div class="container-fluid w-100 h-100 bg-darkblue">
     <%= header_two %>
 
-
+    <%= no_group(@groups) %>
 
 
 
@@ -29,7 +29,7 @@
 
 <div class="row">
   <div class="col-12 text-center">
-    <%= link_to "Add new", new_group_path, class: 'btn btn-success w-360'%>
+    <%= link_to "Add new", new_group_path, class: 'btn btn-success w-100'%>
   </div>
 </div>
 </div>
