--- a/app/views/layouts/_header_two.html.erb
+++ b/app/views/layouts/_header_two.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-transparent">
-  <div class="d-flex justify-content-between w-100">
+  <div class="d-flex justify-content-between w-100 align-items-baseline">
   <div class="wrapper">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
