--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,13 @@
 <div class="container-fluid w-100 h-100 bg-darkblue">
+    <%= header_two %>
 
+    <%= no_project(@projects) %>
   <div class="row">
     <div class="col-6 mx-auto text-center">
 
       <%# <%= image_tag @user.image, class: 'user-show-image text-center mt-5'%>
 
-      <h4 class="h1 text-white"> <%= current_user.name %> </h4>
+      <%# <h4 class="h1 text-white"> <%= current_user.name %> 
     </div>
   </div>
 
