--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class='h-100'>
   <head>
     <title>Capstone</title>
     <%= csrf_meta_tags %>
@@ -11,10 +11,10 @@
 
   </head>
 
-  <body>
+  <body class='h-100'>
     <%= restrict_header %>
 
-    <div class="container-fluid bg-gray p-0 vh-95">
+    <div class="container-fluid bg-gray h-100 p-0 ">
     <%= render 'layouts/messages'%>
 
       <%= yield %>
