--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,8 +13,8 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-12 p-0">
-    <div class="d-flex flex-column flex-md-row justify-content-between bg-white shadow-sm p-3 border">
+  <div class="col-12">
+    <div class="d-flex flex-column flex-md-row justify-content-between bg-white shadow-sm p-0 border">
       <h6 class="h6 text-muted">
         These are all the groups that are a part of this project.
       </h6>
