--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -9,10 +9,10 @@
       <% next if group.name == 'None'%>
         <div class="row">
     <div class="col-6 mx-auto text-center d-flex flex-column align-items-center">
-      <%= link_to group_path(group), class: 'w-360' do %>
+      <%= link_to group_path(group), class: 'w-100' do %>
         <div class="cont border-bottom d-flex flex-column my-3 pb-2">
           <div class="d-flex align-items-baseline justify-content-center">
-            <%= fa_icon group.icon, class: 'f-s-2 text-white mr-4' %> <p class='text-white h3 sm-h4'> <%= group.name %> </p> 
+            <%= fa_icon group.icon, class: 'f-s-2 text-white mr-4 d-none d-md-inline' %> <p class='text-white h3 sm-h4'> <%= group.name %> </p> 
           </div>
            <div class="d-flex align-items-baseline justify-content-center">
               <small class='text-white h6 sm-h5'> Created: <%= group.created_at.strftime("%B, %d, %Y") %> </small> 
