--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/dist/css/bootstrap";
 @import "font_awesome5_webfont";
+
 .selector-on {
   color: gold;
 }
@@ -9,49 +10,61 @@ $enable-responsive-font-sizes: true;
 .bg-gradblue {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#3d7cbf+35,066dab+96 */
   background: rgb(61, 124, 191); /* Old browsers */
-  background: -moz-linear-gradient(
-    top,
-    rgba(61, 124, 191, 1) 35%,
-    rgba(6, 109, 171, 1) 96%
-  ); /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    top,
-    rgba(61, 124, 191, 1) 35%,
-    rgba(6, 109, 171, 1) 96%
-  ); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    rgba(61, 124, 191, 1) 35%,
-    rgba(6, 109, 171, 1) 96%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d7cbf', endColorstr='#066dab',GradientType=0 ); /* IE6-9 */
+  background:
+    -moz-linear-gradient(
+      top,
+      rgba(61, 124, 191, 1) 35%,
+      rgba(6, 109, 171, 1) 96%
+    ); /* FF3.6-15 */
+
+  background:
+    -webkit-linear-gradient(
+      top,
+      rgba(61, 124, 191, 1) 35%,
+      rgba(6, 109, 171, 1) 96%
+    ); /* Chrome10-25,Safari5.1-6 */
+
+  background:
+    linear-gradient(
+      to bottom,
+      rgba(61, 124, 191, 1) 35%,
+      rgba(6, 109, 171, 1) 96%
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#3d7cbf', endColorstr='#066dab', GradientType=0); /* IE6-9 */
 }
 
 .bg-darkblue {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#21559e+21,21559e+21,3778c2+64,3778c2+96 */
   background: rgb(33, 85, 158); /* Old browsers */
-  background: -moz-linear-gradient(
-    top,
-    rgba(33, 85, 158, 1) 21%,
-    rgba(33, 85, 158, 1) 21%,
-    rgba(55, 120, 194, 1) 64%,
-    rgba(55, 120, 194, 1) 96%
-  ); /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    top,
-    rgba(33, 85, 158, 1) 21%,
-    rgba(33, 85, 158, 1) 21%,
-    rgba(55, 120, 194, 1) 64%,
-    rgba(55, 120, 194, 1) 96%
-  ); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    rgba(33, 85, 158, 1) 21%,
-    rgba(33, 85, 158, 1) 21%,
-    rgba(55, 120, 194, 1) 64%,
-    rgba(55, 120, 194, 1) 96%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#21559e', endColorstr='#3778c2',GradientType=0 ); /* IE6-9 */
+  background:
+    -moz-linear-gradient(
+      top,
+      rgba(33, 85, 158, 1) 21%,
+      rgba(33, 85, 158, 1) 21%,
+      rgba(55, 120, 194, 1) 64%,
+      rgba(55, 120, 194, 1) 96%
+    ); /* FF3.6-15 */
+
+  background:
+    -webkit-linear-gradient(
+      top,
+      rgba(33, 85, 158, 1) 21%,
+      rgba(33, 85, 158, 1) 21%,
+      rgba(55, 120, 194, 1) 64%,
+      rgba(55, 120, 194, 1) 96%
+    ); /* Chrome10-25,Safari5.1-6 */
+
+  background:
+    linear-gradient(
+      to bottom,
+      rgba(33, 85, 158, 1) 21%,
+      rgba(33, 85, 158, 1) 21%,
+      rgba(55, 120, 194, 1) 64%,
+      rgba(55, 120, 194, 1) 96%
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#21559e', endColorstr='#3778c2', GradientType=0); /* IE6-9 */
 }
 
 .vh-95 {
@@ -87,33 +100,35 @@ $enable-responsive-font-sizes: true;
   overflow: scroll;
 }
 
-$space-amounts: (1, 2, 3, 4, 5);
+.f-s-1 {
+  font-size: #{$space}rem;
+}
 
-@each $space in $space-amounts {
-  .f-s-#{$space} {
-    font-size: #{$space}rem;
-  }
-  .f-s-#{$space} {
-    font-size: #{$space}rem 0;
-  }
-  .f-s-#{$space} {
-    font-size: 0 #{$space}rem;
-  }
-  .f-s-#{$space} {
-    font-size: #{$space}rem;
-  }
-  .f-s-#{$space} {
-    font-size: #{$space}rem;
-  }
+.f-s-2 {
+  font-size: #{$space}rem 0;
+}
+
+.f-s-3 {
+  font-size: 0 #{$space}rem;
+}
+
+.f-s-4 {
+  font-size: #{$space}rem;
+}
+
+.f-s-5 {
+  font-size: #{$space}rem;
 }
 
 @media only screen and (max-width: 450px) {
   .sm-h1 {
     font-size: 2.5rem !important;
   }
+
   .sm-h2 {
     font-size: 1.7rem !important;
   }
+
   .sm-h3 {
     font-size: 1.3rem !important;
   }
@@ -129,6 +144,7 @@ $space-amounts: (1, 2, 3, 4, 5);
   .sm-h7 {
     font-size: 0.5rem !important;
   }
+
   .sm-w-100 {
     width: 65% !important;
   }
