add picture and time to chat. fix containter for registration

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
 <h1><%= t('.sign_up') %></h1>
 
 <button class="selector-on">Manager</button>
@@ -62,3 +62,4 @@
 
 <%= render 'devise/shared/links' %>
 <%= javascript_pack_tag 'main' %>
+</div>
