--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -13,9 +13,9 @@
   </div>
    <div class="form-group"> 
     <%= f.label :minutes %>
-    <%= f.text_field :minutes, class: 'form-control', id: 'amount-to-hide' %> 
+    <%= f.text_field :minutes, class: 'form-control amount-to-hide-min', id: 'amount-to-hide' %> 
     <%= f.label :hours %>
-    <%= f.text_field :hours, class: 'form-control', id: 'amount-to-hide' %> 
+    <%= f.text_field :hours, class: 'form-control amount-to-hide-hour', id: 'amount-to-hide' %> 
 
    </div> 
 
