--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid w-100 h-100 bg-darkblue">
+<div class="container-fluid w-100 h-100 h-100vh bg-darkblue">
     <%= header_two('groups') %>
 
     <%= no_group(@groups) %>
