--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid w-100 h-100 bg-darkblue">
+<div class="container-fluid w-100 h-100vh h-100 bg-darkblue">
     <%= header_two('projects') %>
 
     <%= no_project(@projects) %>
