--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body class='h-100'>
     <%= restrict_header %>
 
-    <div class="container-fluid bg-gray h-100 p-0 ">
+    <div class="container-fluid bg-gray p-0 ">
     <%= render 'layouts/messages'%>
 
       <%= yield %>
