--- a/app/views/layouts/_header_two.html.erb
+++ b/app/views/layouts/_header_two.html.erb
@@ -15,8 +15,9 @@
       </ul>
   </div>
   </div>
-    <h4 class="h2 text-white sm-h3"> See all <%= title %> </h4>
-
+    <div class="text-center">
+      <h4 class="h2 text-white sm-h3 title-pr"> See all <%= title %> </h4>
+    </div>
   <%= fa_icon 'search', class: 'text-white'%>
   </div>
 </nav>
