--- a/app/views/tasks/externals.html.erb
+++ b/app/views/tasks/externals.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container v-100 vh-100">
 
-<div class="row">
+<div class="row pt-5">
   <div class="col-12">
     <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
       <h6 class="h6 text-muted">
