--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid w-100  bg-darkblue">
+<div class="container-fluid w-100 h-100vh bg-darkblue">
 
   <div class="row">
     <div class="col-12 col-md-6 mx-auto text-center">
